// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpgradePageContainer renders prompt correctly 1`] = `
<h1
  class="prompt"
>
  OK, I need to be 
  <span
    class="green"
  >
    updated
  </span>
</h1>
`;

exports[`UpgradePageContainer renders the correct banner image 1`] = `
<img
  alt="upgrade-page-banner"
  class="image"
  draggable="false"
  src="upgrade-page.png"
  style="max-height: 100%; max-width: 100%;"
/>
`;

exports[`UpgradePageContainer when sources are updated and there are updates to the web-portal package renders prompt correctly 1`] = `
<h1
  class="prompt"
>
  OK, I need to be 
  <span
    class="green"
  >
    updated
  </span>
</h1>
`;

exports[`UpgradePageContainer when sources are updated and there are updates to the web-portal package textarea component displays web-portal upgrade messages 1`] = `
<textarea
  class="textarea"
  data-testid="textarea"
  disabled=""
>
  Starting install & upgrade process
dpkg-exec: Running dpkg
</textarea>
`;

exports[`UpgradePageContainer when the system is being updated messages are displayed in the textarea component 1`] = `
<textarea
  class="textarea"
  data-testid="textarea"
  disabled=""
>
  Starting install & upgrade process
dpkg-exec: Running dpkg
</textarea>
`;

exports[`UpgradePageContainer when the system is being updated renders progress bar correctly 1`] = `
<div
  class="progress"
  data-testid="progress"
>
  <svg
    class="rc-progress-line "
    preserveAspectRatio="none"
    viewBox="0 0 100 2"
  >
    <path
      class="rc-progress-line-trail"
      d="M 1,1
           L 99,1"
      fill-opacity="0"
      stroke="#D9D9D9"
      stroke-linecap="round"
      stroke-width="1"
    />
    <path
      class="rc-progress-line-path"
      d="M 1,1
           L 99,1"
      fill-opacity="0"
      stroke="#71c0b4"
      stroke-linecap="round"
      stroke-width="2"
      style="stroke-dasharray: 50px, 100px; stroke-dashoffset: -0px; transition: stroke-dashoffset 0.3s ease 0s, stroke-dasharray .3s ease 0s, stroke 0.3s linear; transition-duration: .3s, .3s, .3s, .06s;"
    />
  </svg>
</div>
`;

exports[`UpgradePageContainer when the system is being updated renders prompt correctly 1`] = `
<h1
  class="prompt"
>
  OK, I need to be 
  <span
    class="green"
  >
    updated
  </span>
</h1>
`;

exports[`UpgradePageContainer when the system upgrade fails messages are displayed in the textarea component 1`] = `
<textarea
  class="textarea"
  data-testid="textarea"
  disabled=""
>
  Starting install & upgrade process
dpkg-exec: Running dpkg

There was an error while upgrading packages.
</textarea>
`;

exports[`UpgradePageContainer when the system upgrade fails renders prompt correctly 1`] = `
<h1
  class="prompt"
>
  OK, I need to be 
  <span
    class="green"
  >
    updated
  </span>
</h1>
`;

exports[`UpgradePageContainer when the upgrade finishes messages are displayed in the textarea component 1`] = `
<textarea
  class="textarea"
  data-testid="textarea"
  disabled=""
>
  Starting install & upgrade process
dpkg-exec: Running dpkg
Finished upgrade
</textarea>
`;

exports[`UpgradePageContainer when the upgrade finishes renders progress bar correctly 1`] = `
<div
  class="progress"
  data-testid="progress"
>
  <svg
    class="rc-progress-line "
    preserveAspectRatio="none"
    viewBox="0 0 100 2"
  >
    <path
      class="rc-progress-line-trail"
      d="M 1,1
           L 99,1"
      fill-opacity="0"
      stroke="#D9D9D9"
      stroke-linecap="round"
      stroke-width="1"
    />
    <path
      class="rc-progress-line-path"
      d="M 1,1
           L 99,1"
      fill-opacity="0"
      stroke="#71c0b4"
      stroke-linecap="round"
      stroke-width="2"
      style="stroke-dasharray: 0px, 100px; stroke-dashoffset: -0px; transition: stroke-dashoffset 0.3s ease 0s, stroke-dasharray .3s ease 0s, stroke 0.3s linear; transition-duration: 0s, 0s;"
    />
  </svg>
</div>
`;

exports[`UpgradePageContainer when the upgrade finishes renders prompt correctly 1`] = `
<h1
  class="prompt"
>
  Your system is 
  <span
    class="green"
  >
    up to date
  </span>
  !
</h1>
`;

exports[`UpgradePageContainer when there are major OS updates available and user 'requireBurn' renders the correct message 1`] = `
<div
  aria-pressed="false"
  class="backdrop"
  data-testid="dialog"
  role="button"
>
  <div
    aria-hidden="false"
    aria-modal="true"
    class="dialog newOsVersionAvailableDialog"
    role="dialog"
  >
    <header
      class="header"
    />
    <div
      class="messageContainer"
      data-testid="dialog-message"
    >
      <span
        class="dialogTitle"
      >
        This version of pi-topOS is no longer supported
      </span>
    </div>
    <div
      class="content"
    >
      <span
        class="osUpgradeWarning"
      >
        This OS version is out of date and not maintained. Your pi-top will not have the latest security updates and features, even if you fully update the system.
      </span>
      <br />
      <span
        class="osUpgradeWarning"
      >
        For more information, go to 
        <button
          class="unstyled link"
          type="button"
        >
          https://pi-top.com/help/out-of-date
        </button>
      </span>
      <br />
      <span
        class="osUpgradeWarning"
      >
        You can also find instructions for downloading and installing the latest version of pi‑topOS from our website.
      </span>
      <br />
      <div
        class="actions"
      >
        <button
          class="unstyled btn"
          type="button"
        >
          <svg
            class="primaryButtonSVGContainer"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <clippath
                id="myClip"
              >
                <rect
                  height="17"
                  width="38"
                  y="1"
                />
              </clippath>
              <symbol
                class="rolloverFill"
                id="corner"
                preserveAspectRatio="xMaxYMin slice"
                viewBox="0 0 38 17"
              >
                <path
                  class="border"
                  clip-path="url(#myClip)"
                  d=" M38 32 30.192 32 C17.754 31.543 11.604 30.481 7.442 26.797 1.285 21.415 1.568 12.167 8.047 7.128 13.231 3.034 21.653 1.962 30.192 2.001 L38 2"
                  shape-rendering="geometricPrecision"
                  vector-effect="non-scaling-stroke"
                />
              </symbol>
              <symbol
                class="rolloverFill"
                id="topBottom"
                preserveAspectRatio="none"
                viewBox="0 0 100 3"
              >
                <path
                  class="border"
                  d="m 0 2 l 100 0"
                  shape-rendering="crispEdges"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  class="border"
                  d="m 0 3 l 100 0"
                  shape-rendering="crispEdges"
                  vector-effect="non-scaling-stroke"
                />
              </symbol>
              <symbol
                id="leftRight"
                preserveAspectRatio="none"
                viewBox="0 0 2 100"
              >
                <path
                  class="border"
                  d="M 1 0 l 0 100"
                  shape-rendering="crispEdges"
                  vector-effect="non-scaling-stroke"
                />
              </symbol>
            </defs>
            <use
              height="17"
              href="#corner"
              width="38"
            />
            <use
              height="17"
              href="#corner"
              transform="scale(-1, 1)"
              width="40"
              x="-100%"
              y="0"
            />
            <use
              height="17"
              href="#corner"
              style="overflow: visible;"
              transform="scale(1, -1)"
              width="40"
              x="-0.2"
              y="-100%"
            />
            <use
              height="17"
              href="#corner"
              transform="scale(-1, -1)"
              width="40"
              x="-100%"
              y="-100%"
            />
            <foreignobject
              height="4px"
              width="100%"
              x="0"
              y="1"
            >
              <span
                class="rolloverBG"
                style="display: flex; line-height: 0; margin: 0px 38px 0px 37px;"
              >
                <svg
                  height="4"
                  preserveAspectRatio="none"
                  version="1.1"
                  width="100%"
                >
                  <use
                    height="3"
                    href="#topBottom"
                    width="100%"
                    x="0"
                    y="-1"
                  />
                </svg>
              </span>
            </foreignobject>
            <foreignobject
              height="3px"
              transform="scale(1, -1)"
              width="100%"
              x="0"
              y="-100%"
            >
              <span
                style="display: flex; line-height: 0; margin: 0px 39px;"
              >
                <svg
                  height="3"
                  preserveAspectRatio="none"
                  version="1.1"
                  width="100%"
                >
                  <use
                    class="border"
                    height="3"
                    href="#topBottom"
                    width="100%"
                    x="0"
                    y="0"
                  />
                </svg>
              </span>
            </foreignobject>
            <foreignobject
              height="100%"
              width="50px"
              x="2"
              y="0"
            >
              <span
                class="rolloverBG"
                style="display: flex; position: absolute; left: -1px; top: 16px; bottom: 17px; width: 40px;"
              >
                <svg
                  height="100%"
                  preserveAspectRatio="none"
                  version="1.1"
                  width="4"
                >
                  <use
                    class="border fix"
                    height="50"
                    href="#leftRight"
                    width="3"
                    x="0.5"
                    y="0"
                  />
                </svg>
              </span>
            </foreignobject>
            <foreignobject
              height="100%"
              width="100%"
              x="0"
              y="0"
            >
              <span
                class="rolloverBG"
                style="display: flex; position: absolute; left: 20px; right: 1.2px; top: 17px; bottom: 17px;"
              >
                <svg
                  height="100%"
                  preserveAspectRatio="xMaxYMid slice"
                  version="1.1"
                  width="100%"
                >
                  <use
                    class="border"
                    height="100%"
                    href="#leftRight"
                    transform="scale(-1, 1)"
                    width="3"
                    x="-100%"
                    y="0"
                  />
                </svg>
              </span>
            </foreignobject>
          </svg>
          <span
            class="textWrapper rolloverFill"
          >
            Close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`UpgradePageContainer when there are major OS updates available and user 'shouldBurn' renders the correct message 1`] = `
<div
  aria-pressed="false"
  class="backdrop"
  data-testid="dialog"
  role="button"
>
  <div
    aria-hidden="false"
    aria-modal="true"
    class="dialog newOsVersionAvailableDialog"
    role="dialog"
  >
    <header
      class="header"
    />
    <div
      class="messageContainer"
      data-testid="dialog-message"
    >
      <span
        class="dialogTitle"
      >
        Major OS update required
      </span>
    </div>
    <div
      class="content"
    >
      <span
        class="osUpgradeWarning"
      >
        There is a major OS update available so the update process will take a while. We recommend reburning the SD card.
      </span>
      <br />
      <span
        class="osUpgradeWarning"
      >
        For more information, go to 
        <button
          class="unstyled link"
          type="button"
        >
          https://pi-top.com/help/out-of-date
        </button>
      </span>
      <br />
      <span
        class="osUpgradeWarning"
      >
        You can also find instructions for downloading and installing the latest version of pi‑topOS from our website.
      </span>
      <br />
      <div
        class="actions"
      >
        <button
          class="unstyled btn"
          type="button"
        >
          <svg
            class="primaryButtonSVGContainer"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <clippath
                id="myClip"
              >
                <rect
                  height="17"
                  width="38"
                  y="1"
                />
              </clippath>
              <symbol
                class="rolloverFill"
                id="corner"
                preserveAspectRatio="xMaxYMin slice"
                viewBox="0 0 38 17"
              >
                <path
                  class="border"
                  clip-path="url(#myClip)"
                  d=" M38 32 30.192 32 C17.754 31.543 11.604 30.481 7.442 26.797 1.285 21.415 1.568 12.167 8.047 7.128 13.231 3.034 21.653 1.962 30.192 2.001 L38 2"
                  shape-rendering="geometricPrecision"
                  vector-effect="non-scaling-stroke"
                />
              </symbol>
              <symbol
                class="rolloverFill"
                id="topBottom"
                preserveAspectRatio="none"
                viewBox="0 0 100 3"
              >
                <path
                  class="border"
                  d="m 0 2 l 100 0"
                  shape-rendering="crispEdges"
                  vector-effect="non-scaling-stroke"
                />
                <path
                  class="border"
                  d="m 0 3 l 100 0"
                  shape-rendering="crispEdges"
                  vector-effect="non-scaling-stroke"
                />
              </symbol>
              <symbol
                id="leftRight"
                preserveAspectRatio="none"
                viewBox="0 0 2 100"
              >
                <path
                  class="border"
                  d="M 1 0 l 0 100"
                  shape-rendering="crispEdges"
                  vector-effect="non-scaling-stroke"
                />
              </symbol>
            </defs>
            <use
              height="17"
              href="#corner"
              width="38"
            />
            <use
              height="17"
              href="#corner"
              transform="scale(-1, 1)"
              width="40"
              x="-100%"
              y="0"
            />
            <use
              height="17"
              href="#corner"
              style="overflow: visible;"
              transform="scale(1, -1)"
              width="40"
              x="-0.2"
              y="-100%"
            />
            <use
              height="17"
              href="#corner"
              transform="scale(-1, -1)"
              width="40"
              x="-100%"
              y="-100%"
            />
            <foreignobject
              height="4px"
              width="100%"
              x="0"
              y="1"
            >
              <span
                class="rolloverBG"
                style="display: flex; line-height: 0; margin: 0px 38px 0px 37px;"
              >
                <svg
                  height="4"
                  preserveAspectRatio="none"
                  version="1.1"
                  width="100%"
                >
                  <use
                    height="3"
                    href="#topBottom"
                    width="100%"
                    x="0"
                    y="-1"
                  />
                </svg>
              </span>
            </foreignobject>
            <foreignobject
              height="3px"
              transform="scale(1, -1)"
              width="100%"
              x="0"
              y="-100%"
            >
              <span
                style="display: flex; line-height: 0; margin: 0px 39px;"
              >
                <svg
                  height="3"
                  preserveAspectRatio="none"
                  version="1.1"
                  width="100%"
                >
                  <use
                    class="border"
                    height="3"
                    href="#topBottom"
                    width="100%"
                    x="0"
                    y="0"
                  />
                </svg>
              </span>
            </foreignobject>
            <foreignobject
              height="100%"
              width="50px"
              x="2"
              y="0"
            >
              <span
                class="rolloverBG"
                style="display: flex; position: absolute; left: -1px; top: 16px; bottom: 17px; width: 40px;"
              >
                <svg
                  height="100%"
                  preserveAspectRatio="none"
                  version="1.1"
                  width="4"
                >
                  <use
                    class="border fix"
                    height="50"
                    href="#leftRight"
                    width="3"
                    x="0.5"
                    y="0"
                  />
                </svg>
              </span>
            </foreignobject>
            <foreignobject
              height="100%"
              width="100%"
              x="0"
              y="0"
            >
              <span
                class="rolloverBG"
                style="display: flex; position: absolute; left: 20px; right: 1.2px; top: 17px; bottom: 17px;"
              >
                <svg
                  height="100%"
                  preserveAspectRatio="xMaxYMid slice"
                  version="1.1"
                  width="100%"
                >
                  <use
                    class="border"
                    height="100%"
                    href="#leftRight"
                    transform="scale(-1, 1)"
                    width="3"
                    x="-100%"
                    y="0"
                  />
                </svg>
              </span>
            </foreignobject>
          </svg>
          <span
            class="textWrapper rolloverFill"
          >
            Close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`UpgradePageContainer when there's not enough space left on device renders prompt correctly 1`] = `
<h1
  class="prompt"
>
  OK, I need to be 
  <span
    class="green"
  >
    updated
  </span>
</h1>
`;

exports[`UpgradePageContainer when updating sources fails and the Retry button is pressed messages are displayed in the textarea component 1`] = `
<textarea
  class="textarea"
  data-testid="textarea"
  disabled=""
>
  Starting to update sources
Updating blah

There was a problem updating sources
Starting to update sources
Updating blah
</textarea>
`;

exports[`UpgradePageContainer when updating sources fails and the Retry button is pressed renders prompt correctly 1`] = `
<h1
  class="prompt"
>
  OK, let's try 
  <span
    class="green"
  >
    updating
  </span>
   again!
</h1>
`;

exports[`UpgradePageContainer when updating sources fails messages are displayed in the textarea component 1`] = `
<textarea
  class="textarea"
  data-testid="textarea"
  disabled=""
>
  Starting to update sources
Updating blah

There was a problem updating sources
</textarea>
`;

exports[`UpgradePageContainer when updating sources fails renders prompt correctly 1`] = `
<h1
  class="prompt"
>
  OK, I need to be 
  <span
    class="green"
  >
    updated
  </span>
</h1>
`;

exports[`UpgradePageContainer when updating web-portal fails and the Retry button is pressed messages are displayed in the textarea component 1`] = `
<textarea
  class="textarea"
  data-testid="textarea"
  disabled=""
>
  Starting to update sources
Updating blah
</textarea>
`;

exports[`UpgradePageContainer when updating web-portal fails and the Retry button is pressed renders prompt correctly 1`] = `
<h1
  class="prompt"
>
  OK, let's try 
  <span
    class="green"
  >
    updating
  </span>
   again!
</h1>
`;

exports[`UpgradePageContainer when updating web-portal fails renders prompt correctly 1`] = `
<h1
  class="prompt"
>
  OK, I need to be 
  <span
    class="green"
  >
    updated
  </span>
</h1>
`;

exports[`UpgradePageContainer when updating web-portal succeeds renders prompt correctly 1`] = `
<h1
  class="prompt"
>
  OK, I need to be 
  <span
    class="green"
  >
    updated
  </span>
</h1>
`;

exports[`UpgradePageContainer while updating sources messages are displayed in the textarea component 1`] = `
<textarea
  class="textarea"
  data-testid="textarea"
  disabled=""
>
  Starting to update sources
Updating blah
</textarea>
`;

exports[`UpgradePageContainer while updating sources renders progress bar correctly 1`] = `
<div
  class="progress"
  data-testid="progress"
>
  <svg
    class="rc-progress-line "
    preserveAspectRatio="none"
    viewBox="0 0 100 2"
  >
    <path
      class="rc-progress-line-trail"
      d="M 1,1
           L 99,1"
      fill-opacity="0"
      stroke="#D9D9D9"
      stroke-linecap="round"
      stroke-width="1"
    />
    <path
      class="rc-progress-line-path"
      d="M 1,1
           L 99,1"
      fill-opacity="0"
      stroke="#71c0b4"
      stroke-linecap="round"
      stroke-width="2"
      style="stroke-dasharray: 50px, 100px; stroke-dashoffset: -0px; transition: stroke-dashoffset 0.3s ease 0s, stroke-dasharray .3s ease 0s, stroke 0.3s linear; transition-duration: .3s, .3s, .3s, .06s;"
    />
  </svg>
</div>
`;

exports[`UpgradePageContainer while updating sources renders prompt correctly 1`] = `
<h1
  class="prompt"
>
  OK, I need to be 
  <span
    class="green"
  >
    updated
  </span>
</h1>
`;

exports[`UpgradePageContainer while updating web-portal renders prompt correctly 1`] = `
<h1
  class="prompt"
>
  OK, I need to be 
  <span
    class="green"
  >
    updated
  </span>
</h1>
`;

exports[`UpgradePageContainer while updating web-portal textarea component displays web-portal upgrade messages 1`] = `
<textarea
  class="textarea"
  data-testid="textarea"
  disabled=""
>
  Starting install & upgrade process
dpkg-exec: Running dpkg
</textarea>
`;
